--- a/views/layout.erb
+++ b/views/layout.erb
@@ -1,7 +1,8 @@
+<!DOCTYPE html>
 <html>
     <head>
         <title>What's their face?</title>
-        <link rel="stylesheet" href="style.css">
+        <link rel="stylesheet" href="css/style.css">
     </head>
     <body>
         <%= yield%>
