HTML + CSS header and logo
What's Their Face official logo created and implemented

--- a/views/cheatsheet.erb
+++ b/views/cheatsheet.erb
@@ -8,10 +8,10 @@
     <%end%>
 </section>
 <div class="button-section">
-    <div class="button">
-        <a>Add New Entry</a>
-    </div>
-    <div class="button">
-        <a>Start Quiz</a>
-    </div>
+    <a href="" class="button">
+        <div>Add New Entry</div>
+    </a>
+    <a href="/quiz_start" class="button">
+        <div>Start New Quiz</div>
+    </a>
 </div>
