--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,23 +1,61 @@
+@import url('https://fonts.googleapis.com/css2?family=Gloria+Hallelujah&display=swap');
+
+*{
+    margin: 0;
+    padding: 0;
+}
+
+a{
+    text-decoration: none;
+    color: black;
+}
+
+header{
+    text-align: center;
+    background-color: rgba(239, 162, 30, 0.95);
+    position: sticky;
+    top:0;
+    margin-bottom: 2rem;
+}
+
+header{
+
+}
+
+header h1{
+    height:45px;
+    font-size: 28px;
+    font-family: 'Gloria Hallelujah';
+    color: white;
+}
+
+header img{
+    height: 120px;
+}
+
 .img-grid{
     display: grid;
     gap: 3rem;
     grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
     grid-auto-rows: 300px;
 }
+
 .img-card{
     background-size: cover;
     position: relative;
     border: solid 1px black;
 }
+
 .img-card h2{
     background-color: white; 
     position: absolute;
-    bottom: -1.3rem;
+    bottom: 0;
     padding: .25rem;
     
     font-family: Arial, Helvetica, sans-serif;
     border: solid .5px black;
 }
+
 .button-section{
     
     font-size: 1.5rem;
