--- a/views/layout.erb
+++ b/views/layout.erb
@@ -5,6 +5,10 @@
         <link rel="stylesheet" href="css/style.css">
     </head>
     <body>
+        <header>
+            <h1>WHAT'S THEIR</h1>
+            <img src="logo/face(2).png" alt="face">
+        </header>
         <%= yield%>
     </body>
 
