--- a/views/layout.erb
+++ b/views/layout.erb
@@ -2,12 +2,14 @@
 <html>
     <head>
         <title>What's their face?</title>
-        <link rel="stylesheet" href="css/style.css">
+        <link rel="stylesheet" href="/css/style.css">
     </head>
     <body>
         <header>
-            <h1>WHAT'S THEIR</h1>
-            <img src="logo/face(2).png" alt="face">
+            <a href="/">
+                <h1>WHAT'S THEIR</h1>
+                <img src="/logo/face(2).png" alt="face">
+            </a>
         </header>
         <%= yield%>
     </body>
