first or full modes functioning, inputs no longer case sensitive
new database table for checking if game is in first or full mode

new methods for interacting with new database table

update_first_or_full method will be implemented once html and css has been created for buttons switching between the two

--- a/views/quiz_start.erb
+++ b/views/quiz_start.erb
@@ -1,4 +1,4 @@
 <form action="/quiz_start" method="POST">
-    <input type="submit" name="submit" value="full name mode" />
-    <input type="submit" name="submit" value="first name only mode" />
+    <input type="submit" name="full_name_mode" value="full name mode" />
+    <input type="submit" name="first_name_only_mode" value="first name only mode" />
 </form>
