--- a/views/start.erb
+++ b/views/start.erb
@@ -1,7 +1,22 @@
-<div>
-    <a href="/cheatsheet">cheatsheet</a>
-</div>
 
-<div>
-    <a href="/quiz_start">start new quiz</a>
+
+<div class="start-menu">
+
+    <div class="start-menu-logo">
+        
+    </div>
+
+    <div class="start-menu-buttons">
+        <a href="/quiz_start">
+            <div>
+                Start New Quiz
+            </div>
+        </a>
+        <a href="/cheatsheet">
+            <div>
+                Cheatsheet
+            </div>
+        </a>
+    </div>
+
 </div>
