--- a/views/quiz_start.erb
+++ b/views/quiz_start.erb
@@ -1,4 +1,20 @@
-<form action="/quiz_start" method="POST">
-    <input type="submit" name="full_name_mode" value="full name mode" />
-    <input type="submit" name="first_name_only_mode" value="first name only mode" />
-</form>
+<div class="start-menu">
+    
+     <div class="background-container">
+        <div class="sliding-background">
+            <div class="blur"></div>
+        </div>
+    </div>
+
+    <div class="start-menu-logo">
+        <p>🤔</p>
+    </div>
+    
+    <div class="start-menu-buttons">   
+        <form action="/quiz_start" method="POST">
+            <input class="start-button" type="submit" name="full_name_mode" value="Full Name Mode" />
+            <input class="start-button" type="submit" name="first_name_only_mode" value="First Name Only Mode" />
+        </form>
+        
+    </div>
+</div>
