--- a/views/start.erb
+++ b/views/start.erb
@@ -2,17 +2,22 @@
 
 <div class="start-menu">
 
+    <div class="background-container">
+        <div class="sliding-background">
+            
+        </div>
+    </div>
+
     <div class="start-menu-logo">
-        
     </div>
 
     <div class="start-menu-buttons">
-        <a href="/quiz_start">
+        <a class="start-button" href="/quiz_start">
             <div>
                 Start New Quiz
             </div>
         </a>
-        <a href="/cheatsheet">
+        <a class="start-button" href="/cheatsheet">
             <div>
                 Cheatsheet
             </div>
