--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,4 +1,5 @@
 @import url('https://fonts.googleapis.com/css2?family=Gloria+Hallelujah&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Press+Start+2P&display=swap');
 
 *{
     margin: 0;
@@ -19,6 +20,7 @@ header{
     top:0;
     margin-bottom: 2rem;
     transition: 0.3s;
+    z-index: 10;
 }
 
 header:hover{
@@ -47,23 +49,25 @@ header img{
     gap: 3rem;
     grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
     grid-auto-rows: 300px;
+    margin: 2rem;
 }
 
 .img-card{
     background-size: cover;
     position: relative;
-    border: solid #a21eef9e 2px;
+    
     
 }
 
 .img-card h2{
-    background-color: white; 
+    background-color: rgba(239, 162, 30, 0.95); 
+    color: white;
     position: absolute;
     bottom: 0;
     padding: .25rem;
     
     font-family: Arial, Helvetica, sans-serif;
-    border: solid .5px black;
+    
 }
 
 .button-section{
@@ -75,9 +79,10 @@ header img{
 }
 
 .button{
-    background-color: rgb(213, 213, 213);
+    background-color: #EFA21E;
+    color: white;
     font-family: Arial, Helvetica, sans-serif;
-    border: solid black 1px;
+    border-radius: 20px;
     flex: 1;
     width: 50%;
     padding: 1rem;
@@ -88,7 +93,7 @@ header img{
 }
 
 .button:hover{
-    background-color: gray;
+    background-color: #efa21ec9;
     color: rgb(255, 255, 255)
 }
 
@@ -113,12 +118,12 @@ header img{
 }
 
 .quiz-img{
+    margin-top: 1rem;
     width: 35%;
     border-radius: 100%;
 }
 
 .form-container{
-    margin-top: 1rem;
     text-align: center;
     
     width: 35%;
@@ -254,7 +259,7 @@ header img{
 .start-button {
     font-family: Arial, Helvetica, sans-serif;
     font-size: 30px;
-    border: black 2px;
+    border: rgba(0, 0, 0, 0) 2px;
     border: dashed;
     border-radius: 50px;
     color: white;
@@ -298,5 +303,46 @@ header img{
         transform: translate3d(-16959px, 0, 0);
 
     }
+}
+
+.cheatsheet{
+background-color: rgb(255, 255, 255);
+    position: absolute;
+    position: fixed;
+    z-index: -1;
+    top:0;
+    height: 1000vh;
+    width: 100%;
+
+}
+
+.progress-bar{
+    font-family: 'Press Start 2P';
+    margin-top: -.5rem;
+}
+
+.quiz-mode-container{
+
+}
+
+.quiz-mode-container p{
+    margin-top: .5rem;
+    font-family: Arial, Helvetica, sans-serif;
+    font-size: 15px;
+}
+
+.quiz-mode-container form{
+    
+}
+
+.quiz-mode-container input{
+    border: 3px solid rgba(239, 162, 30, 0.95);
+    border-radius: 10px;
+    background-color: rgba(239, 162, 30, 0.95);
+    color: white;
+    cursor: pointer;
+    padding: .1rem .2rem;
+    margin: .5rem 0;
+    font-size: 12px;
 }
 
