image file structure remake

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -278,7 +278,7 @@ header img{
 }
 
 .sliding-background{
-    background: url(/logo/slide-modified.jpg) repeat-x;
+    background: url(/img/slide/slide-modified.jpg) repeat-x;
 
     width: 30918px;
     height: 900px;
