--- a/views/cheatsheet.erb
+++ b/views/cheatsheet.erb
@@ -3,7 +3,7 @@
 </div>
     <section class="img-grid">
         <%@students.each do |student|%>
-            <div class="img-card" style="background-image: url(/img/<%=student['id']%>.jpeg)">
+            <div class="img-card" style="background-image: url(/img/students/<%=student['id']%>.jpeg)">
                 <h2><%=student['full_name']%></h2>
             </div>
             
