--- a/views/layout.erb
+++ b/views/layout.erb
@@ -8,7 +8,7 @@
         <header>
             <a href="/">
                 <h1>WHAT'S THEIR</h1>
-                <img src="/logo/face(2).png" alt="face">
+                <img src="/img/logo/face(2).png" alt="face">
             </a>
         </header>
         <%= yield%>
