--- a/views/success.erb
+++ b/views/success.erb
@@ -1,5 +1,9 @@
 <div class="start-menu">
 
+    <h1>YOU WIN!</h1>
+
+    <img src="https://media.tenor.com/-LlG5WSoK74AAAAi/monkey.gif" alt="">
+
     <div class="background-container">
         <div class="sliding-background">
             
@@ -13,11 +17,6 @@
         <a class="start-button" href="/quiz_start">
             <div>
                 Start New Quiz
-            </div>
-        </a>
-        <a class="start-button" href="/cheatsheet">
-            <div>
-                Cheatsheet
             </div>
         </a>
     </div>
